--- a/kind-prod-config.yaml
+++ b/kind-prod-config.yaml
@@ -10,7 +10,10 @@ nodes:
   # this port is exposed from the cluster container
   - containerPort: 30080
     # host OS port which is called from the browser e.g. when UI is opened
-    # it should be the same as {{ .Values.HOME_EXTERNAL_HTTP_PORT }}
-    hostPort: 40120
+    hostPort: 80
     # listens to all interfaces
+    listenAddress: "0.0.0.0"
+    
+  - containerPort: 30443
+    hostPort: 443
     listenAddress: "0.0.0.0"
