fix: fix kuberconfig path

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -54,7 +54,7 @@
 	],
 	// this tells kind where to look for the default config
 	"containerEnv": {
-		"KUBECONFIG": "/workspaces/home-env/home-cluster-kubeconfig"
+		"KUBECONFIG": "/workspaces/home-env/.home-cluster-kubeconfig"
 	},
 	// this is to prevent the k8s cluster container from pausing when closing VSCode
 	"shutdownAction": "none"
