--- a/.devcontainer/devcontainer.env.example
+++ b/.devcontainer/devcontainer.env.example
@@ -11,6 +11,12 @@ HOME_PROD_AWS_BUCKET=<TO_BE_MODIFIED!!!>
 HOME_PROD_AWS_SUBFOLDER_NAME=<TO_BE_MODIFIED!!!>
 HOME_PROD_AWS_REGION=<TO_BE_MODIFIED!!!>
 
+HOME_PROD_SYNCHRONIZER_SCHEDULE=<TO_BE_MODIFIED!!!>
+HOME_PROD_SYNCHRONIZER_ENABLED=<TO_BE_MODIFIED!!!>
+HOME_PROD_SYNCHRONIZER_ENV_REPOSITORY=<TO_BE_MODIFIED!!!>
+HOME_PROD_SYNCHRONIZER_PATH_TO_HELMFILE=<TO_BE_MODIFIED!!!>
+HOME_PROD_SYNCHRONIZER_CONFIGMAP_NAME=<TO_BE_MODIFIED!!!>
+
 HOME_PROD_DATABASE_HOST=<TO_BE_MODIFIED!!!>
 HOME_PROD_DATABASE_PORT=<TO_BE_MODIFIED!!!>
 HOME_PROD_DATABASE_NAME=<TO_BE_MODIFIED!!!>
