--- a/deploy/helmfile.yaml
+++ b/deploy/helmfile.yaml
@@ -92,7 +92,7 @@ releases:
       - ingress-nginx
     values:
       # https://helmfile.readthedocs.io/en/latest/#loading-remote-environment-values-files
-      - git::https://github.com/TourmalineCore/home-ui.git@/ci/values.yaml?ref=c064fc4cb34ba5aac8b260279c91333465c2c724
+      - git::https://github.com/TourmalineCore/home-ui.git@/ci/values.yaml?ref=master
       - values.yaml.gotmpl
       - values-ui.yaml.gotmpl    
 
