--- a/deploy/helmfile.yaml
+++ b/deploy/helmfile.yaml
@@ -84,8 +84,10 @@ releases:
       app: home-ui
     wait: true
     chart: bitnami/nginx
-    # after 15.3.5 our docker file or setup can no longer start, need to investigate what is wrong for the newer versions
-    version: 15.3.5
+    # chart was updated to 15.12.1 to add support of ingress.tlsWwwPrefix to simply add cert for www subdomain
+    # changelog ref: https://github.com/bitnami/charts/blob/main/bitnami/nginx/CHANGELOG.md#15120-2024-02-20
+    # version 15.12.1 is used instead of 15.12.0 because Yandex Mirror doesn't contain 15.12.0 for some reason
+    version: 15.12.1
     # it won't work anyway until ingress controller is created
     # thus we wait for it to be ready first
     needs: 
