feat: add s3 backupper to make backups of s3 storage

--- a/.devcontainer/devcontainer.env.example
+++ b/.devcontainer/devcontainer.env.example
@@ -17,6 +17,12 @@ HOME_PROD_SYNCHRONIZER_ENV_REPOSITORY=<TO_BE_MODIFIED!!!>
 HOME_PROD_SYNCHRONIZER_PATH_TO_HELMFILE=<TO_BE_MODIFIED!!!>
 HOME_PROD_SYNCHRONIZER_CONFIGMAP_NAME=<TO_BE_MODIFIED!!!>
 
+HOME_PROD_BACKUPS_SCHEDULE=0 19 * * *
+HOME_PROD_S3_BACKUPS_FILENAME_PREFIX=<TO_BE_MODIFIED!!!>
+HOME_PROD_BACKUPS_AWS_BUCKET=<TO_BE_MODIFIED!!!>
+HOME_PROD_BACKUPS_AWS_ACCESS_KEY_ID=<TO_BE_MODIFIED!!!>
+HOME_PROD_BACKUPS_AWS_ACCESS_SECRET_KEY=<TO_BE_MODIFIED!!!>
+
 HOME_PROD_DATABASE_HOST=<TO_BE_MODIFIED!!!>
 HOME_PROD_DATABASE_PORT=<TO_BE_MODIFIED!!!>
 HOME_PROD_DATABASE_NAME=<TO_BE_MODIFIED!!!>
