ci: add vars for captcha and mail form

--- a/.devcontainer/devcontainer.env.example
+++ b/.devcontainer/devcontainer.env.example
@@ -42,3 +42,10 @@ HOME_PROD_INIT_ADMIN_LASTNAME=<TO_BE_MODIFIED!!!>
 HOME_PROD_INIT_ADMIN_EMAIL=<TO_BE_MODIFIED!!!>
 
 HOME_PROD_LETS_ENCRYPT_EMAIL=<TO_BE_MODIFIED!!!>
+
+HOME_PROD_NEXT_PUBLIC_TARGET_EMAIL=<TO_BE_MODIFIED!!!>
+HOME_PROD_MAILRU_EMAIL=<TO_BE_MODIFIED!!!>
+HOME_PROD_MAILRU_PASSWORD=<TO_BE_MODIFIED!!!>
+HOME_PROD_NEXT_PUBLIC_SMARTCAPTCHA_CLIENT_KEY=<TO_BE_MODIFIED!!!>
+HOME_PROD_SMARTCAPTCHA_SERVER_KEY=<TO_BE_MODIFIED!!!>
+HOME_PROD_NEXT_PUBLIC_ENABLE_SMARTCAPTCHA=<TO_BE_MODIFIED!!!>
